# break

./: .gitignore  CMakeLists.txt
docs/: Architecture_Overview.md  BW191_Architecture.md  Build_Guide.md  CryENGINE_Architecture.md  Engine_Modules.md  GEFS_Architecture.md  Implementation_Status.md  Phase5B_ClusteredLighting.md  PureC_Engine_DeepDive.md  PureC_Engine_ExecutionPlan.md  PureC_Engine_Proposal.md  Rendering_Pipeline.md  Round11_Performance_Plan.md  T3DGameR1_Architecture.md  index.md  notes.html
empty/: CMakeLists.txt  empty_application.cc
engine/: CMakeLists.txt  toolchain-clang-linux.cmake  toolchain-clang-win.cmake  toolchain-msvc.cmake
engine/assets/: init.lua  init.script
engine/scripts/: draw_bench_compare.sh
engine/shaders/: blinn_phong.frag  blinn_phong.vert  blinn_phong_clustered.frag  blinn_phong_clustered.vert  blinn_phong_clustered_vk.frag  blinn_phong_clustered_vk.vert  blinn_phong_vk.frag  blinn_phong_vk.vert  bloom_blur.frag  bloom_blur_vk.frag  bloom_composite.frag  bloom_composite_vk.frag  bloom_extract.frag  bloom_extract_vk.frag  brdf_lut.comp  camera_velocity.frag  camera_velocity_vk.frag  cinematic.frag  cinematic_vk.frag  cluster_cull.comp  color_grade.frag  color_grade_vk.frag  combined_color.frag  combined_color_vk.frag  combined_taa_fxaa.frag  combined_taa_fxaa_vk.frag  compact_draws.comp  compact_draws_gl.comp  contact_shadow.frag  contact_shadow_vk.frag  cull.comp  debug_viz.frag  debug_viz_vk.frag  deferred_light.frag  deferred_light.vert  deferred_light_vk.frag  deferred_light_vk.vert  depth_only.vert  dof.frag  dof_vk.frag  (+86 more)
engine/src/: engine.c  engine.h  main.c  test_vulkan.c
engine/src/animation/: animation.c  animation.h  skeleton.c  skeleton.h
engine/src/asset/: asset.c  asset.h  async_loader.c  async_loader.h  async_loader_private.h  decode_pipeline.c  decode_pipeline.h  hotreload.c  hotreload.h  mipmap_stream.c  mipmap_stream.h  vfs.c  vfs.h
engine/src/audio/: audio.c  audio.h  audio_stream.c  audio_stream.h
engine/src/core/: alloc.c  alloc.h  assert.c  assert.h  log.c  log.h  pool.c  pool.h  profiler.c  profiler.h  string.c  string.h  types.h
engine/src/ecs/: ecs.c  ecs.h  ecs_system.c  ecs_system.h
engine/src/math/: math.c  math.h  simd.h
engine/src/network/: net_replication.c  net_replication.h  network.c  network.h  packet.c  packet.h
engine/src/physics/: bvh.c  bvh.h  character.c  character.h  physics.c  physics.h
engine/src/platform/: filewatch.c  filewatch.h  gamepad_linux.c  gamepad_linux.h  gamepad_win.c  input.c  input.h  platform.h  time.c  time.h  window_cocoa.m  window_wayland.c  window_win32.c  window_x11.c
engine/src/renderer/: camera.c  camera.h  cinematic.c  cinematic.h  cmd_buffer.c  cmd_buffer.h  color_grade.c  color_grade.h  combined_post_process.c  combined_post_process.h  contact_shadow.c  contact_shadow.h  cull.c  cull.h  debug_viz.c  debug_viz.h  deferred.c  deferred.h  dof.c  dof.h  forward_velocity.c  forward_velocity.h  frustum_cull.c  frustum_cull.h  fxaa.c  fxaa.h  god_rays.c  god_rays.h  gpucull.c  gpucull.h  ibl.c  ibl.h  indirect_draw.c  indirect_draw.h  lens_effects.c  lens_effects.h  lens_flare.c  lens_flare.h  lighting.c  lighting.h  (+38 more)
engine/src/rhi/: rhi.c  rhi.h  rhi_gl.c  rhi_vk.c
engine/src/scene/: scene_serial.c  scene_serial.h
engine/src/script/: script.c  script.h  script_lua.c  script_lua.h
engine/src/task/: task.c  task.h
engine/src/ui/: debug_ui.c  debug_ui.h  font.c  font.h  imgui.c  imgui.h  utf8.c  utf8.h
engine/tests/: rhi_stubs.c  test_alloc.c  test_animation.c  test_async_loader.c  test_audio.c  test_camera_frustum.c  test_character.c  test_cmd_buffer.c  test_ecs.c  test_ecs_system.c  test_font_ui.c  test_framework.h  test_input.c  test_lighting.c  test_lod.c  test_math.c  test_mipmap_stream.c  test_net_replication.c  test_network.c  test_occlusion_visibility.c  test_packet.c  test_physics.c  test_pool.c  test_profiler.c  test_render_graph.c  test_scene_serial.c  test_script.c  test_script_lua.c  test_string.c  test_task.c  test_terrain.c  test_vfs.c
engine/tests/golden/: test_vulkan_gl.ppm  test_vulkan_vk.ppm
engine/tools/: packer.c  verify_pak.c
framework/common/: CMakeLists.txt  base_application.cc  base_application.h  graphics_manager.cc  graphics_manager.h  main.cc
framework/interface/: application_interface.h  runtime_module_interface.h
platform/linux/: hello_engine_xcb.c  hello_engine_xcb_opengl.cc
platform/windows/: cbuffer.h  hello_engine_win.c  hello_engine_win_d2d.cc  hello_engine_win_d3d.cc  vsoutput.hs
